Migrated miscellaneous tests